--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           components: 137 + 256 + 64, //search box & caption
           events: {
             onSearchDone: onSearchDone,
-            onVideoChange: onVideoChange,
-            onCaptionConsumed: onCaptionConsumed
+            onVideoChange: onVideoChange
+            // onCaptionConsumed: onCaptionConsumed
           },
           backgroundColor: "#333",
           toggleUI: 2,
